about final changes

--- a/src/css/about-us.css
+++ b/src/css/about-us.css
@@ -60,6 +60,15 @@ border-radius: 4px;
         max-width: 768px;
        
     }
+
+    .about-us-group{
+        /*display: flex;
+        flex-direction: row;*/
+        gap: 40px;
+    }
+.about-group-text{
+
+}
 .about-title{
 font-size: 44px;
 font-weight: 500;
@@ -68,6 +77,8 @@ line-height: 1.45;
 }
 .about-list{
     margin-bottom: 40px;
+    
+
 }
 
 .about-text {
@@ -103,10 +114,7 @@ font-size: 16px;
     height: 545px;
 }
 
-.about-us-group{
-    display: flex;
-    flex-direction: row;
-}
+
 
 }
 /*================== /Screen 768 =============*/
@@ -116,10 +124,19 @@ font-size: 16px;
 @media screen and (min-width: 1280px) {
     .about-us{
         padding: 150px 100px;
-        max-width: 1280px;
+        max-width: 1440px;
        
     }
+    .about-us-group{
+        display: flex;
+        flex-direction: row;
+        gap: 50px;}
 
+    .about-list{
+        max-width: 481px;
+    
+    }
+    
     .about-container{
         background-image:
         url(../img/ornament-about-use-dsctop-smal.png);
@@ -156,7 +173,7 @@ font-size: 16px;
 
 @media screen and (min-width: 1440px) {
    
-    
+
 
     .about-container{
         background-image:
@@ -177,7 +194,9 @@ font-size: 16px;
           url(../img/ornament-about-use-dsctop-@2x.png);
       }
     }
-
+  
+    
+    
     .about-img-inner{
         width: 709px;
         height: 545px;
