--- a/src/partials/about-us.html
+++ b/src/partials/about-us.html
@@ -1,7 +1,7 @@
 <section class="about-us container about-container">
  
    <div class="about-us-group">
-        <div>
+        <div class="about-group-text">
           <h2 class="about-title">About Us</h2>
           <ul class="about-list">
             <li  class="about-text">
