--- a/src/partials/our-collection.html
+++ b/src/partials/our-collection.html
@@ -78,10 +78,7 @@
             media="(min-width: 1280px)"
           />
           <source
-            srcset="
-              ./img/collection-3-tab.jpg    1x,
-              ./img/collection-3-tab@2x.jpg 2x
-            "
+            srcset="./img/collection-3-tab.jpg 1x, ./img/collection-3-tab@2x.jpg 2x"
             media="(min-width: 768px)"
           />
           <source
