--- a/src/css/about-us.css
+++ b/src/css/about-us.css
@@ -23,6 +23,19 @@
       url(../img/ornament-about-use-mob@2x.png);
   }
 }
+
+.about-list:hover,
+.about-list:focus { 
+    padding: 6px;
+    border-radius: 4px;
+    border: 2px solid rgba(176, 186, 62, 0.951);
+    transition: ease-in-out;
+    cursor: pointer; 
+}
+.text:hover{
+    color: aliceblue;
+    font-size: 18px;
+}
 .about-title{
 margin-bottom: 40px;
 font-size: 32px;
