--- a/src/css/header.css
+++ b/src/css/header.css
@@ -2,6 +2,8 @@
 
 .header {
   flex-grow: 1;
+  padding: 31px 20px 57px 20px;
+  background-color: ;
 }
 
 .open {
@@ -10,48 +12,121 @@
 
 .header-container {
   display: flex;
-  padding-top: 31px;
-  padding-bottom: 57px;
   align-items: center;
   justify-content: space-between;
-  min-height: 100px;
-  color: #fcf9f9;
-  padding: 0 40px;
+  min-height: 132px;
+  padding: 0;
+  max-width: 375px;
+  margin: 0 auto;
+}
+
+.header .container-container {
+  height: 132px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-shrink: 0;
 }
 
 .logo-img {
   align-items: center;
 }
 
+.header-navigation {
+  display: inline-flex;
+  align-items: center;
+}
+
+.header-menu {
+  display: none;
+  align-items: flex-start;
+  gap: 25px;
+  list-style: none;
+}
+
+.header-menu-item {
+  position: relative;
+}
+
+.header-menu-link {
+  color: var(--white, #fcf9f9);
+  font-family: Manrope;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.29em; /* 128.571% */
+  text-transform: uppercase;
+  text-decoration: none;
+}
+
+.header-menu-link:hover {
+  color: var(--yellow, #ecd979);
+}
+
+.address {
+  font-style: normal;
+  display: none; /* display: flex; */
+  margin-left: auto;
+}
+
+.address-link {
+  text-decoration: none;
+}
+
+.address-link:hover {
+  border: 1px solid var(--yellow, #ecd979);
+}
 .soc-menu {
   display: flex;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 12px;
+  margin-left: 87px;
 }
 .soc-item {
+  list-style: none;
+  display: flex;
 }
 
 .soc-link {
   border-radius: 15px;
   border: 1px solid rgba(252, 249, 249, 0.1);
   background: rgba(252, 249, 249, 0.1);
+  display: flex;
+  padding: 8px;
+  align-items: center;
 }
 
-.soc-icon {
+.soc-link:hover {
+  border: 1px solid var(--yellow, #ecd979);
 }
+
+.address-link {
+  color: var(--white, #fcf9f9);
+  font-family: Manrope;
+  font-size: 14px;
+  font-style: normal;
+  line-height: 1.43em;
+  text-transform: uppercase;
+}
+
 .burger {
-  display: none;
+  display: flex;
   position: relative;
   z-index: 50;
   align-items: center;
   justify-content: flex-end;
-  width: 30px;
-  height: 18px;
+  width: 36px;
+  height: 24px;
+  margin-left: 12;
 }
 
 .burger span {
   height: 2px;
   width: 80%;
   transform: scale(1);
-  background-color: #faf6f2;
+  background-color: #ecd979;
 }
 
 .burger::before,
@@ -87,14 +162,17 @@
   transform: rotate(45deg) translate(0, 50%);
 }
 
-@media (max-width: 769px) {
+@media (max-width: 768px) {
   .burger {
     display: flex;
-  }
-
-  .header-navigation {
-    display: inline-flex;
-    align-items: center;
+    margin-left: 12px;
+    width: 44px;
+    height: 30px;
+    gap: 2px;
+    background: transparent;
+    border: 1px solid rgba(0, 0, 0, 0);
+    flex-shrink: 0;
+    padding: 0;
   }
 }
 
@@ -107,19 +185,51 @@
   }
 }
 
-@media (max-width: 1280px) {
+@media (min-width: 768px) {
+  .header-container {
+    max-width: 768px;
+  }
+
+  .header {
+    padding: 0;
+  }
+
+  .header .header-container {
+    height: 156px;
+    justify-content: center;
+  }
+
+  .soc-menu {
+    margin-left: auto;
+  }
+
+  .burger {
+    margin-left: 12px;
+  }
+}
+@media (min-width: 1280px) {
+  .header .header-container {
+    justify-content: space-between;
+  }
+
+  .burger {
+    display: none;
+  }
+  .header-container {
+    max-width: 1280px;
+  }
+
+  .header .header-container {
+    height: 172px;
+  }
+
   .header-menu {
     display: flex;
     align-items: flex-start;
+    width: 478px;
+    height: 18px;
     gap: 25px;
-  }
-
-  .header-menu-item {
-    color: var(--white, #fcf9f9);
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 1.29em;
-    text-transform: uppercase;
+    margin-left: 60px;
   }
 
   .header-menu-link {
@@ -132,24 +242,54 @@
     margin-left: auto;
   }
 
-  .address-menu {
-  }
   .address-item {
+    display: flex;
+    padding: 14px 28px;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    border-radius: 15px;
+    border: 1px solid rgba(252, 249, 249, 0.1);
   }
-  .address-link {
-    color: var(--white, #fcf9f9);
-    font-family: Manrope;
-    font-size: 14px;
-    font-style: normal;
-    line-height: 1.43em;
-    text-transform: uppercase;
+
+  .soc-menu {
+    margin-left: 20px;
   }
 }
 
-.menu-icon {
+@media (min-width: 1440px) {
+  .header-container {
+    max-width: 1440px;
+  }
+
+  .header .header-container {
+    height: 170px;
+  }
 }
+
+/* ----------------- Mob-menu ------------------- */
+
 .mob-menu {
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--yellow, #ecd979);
+  padding: 20px 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  overflow: auto;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+.mob-menu.is-open {
+  transform: translateY(0);
+}
+
 .mob-address {
 }
 .mob-address-menu {
