--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,7 +1,7 @@
 <!-- ---------------H-e-a-d-e-r----------------- -->
 
 <header class="header">
-  <div class="header-container container">
+  <div class="header-container">
     <img
       class="logo-img"
       src="../img/logo.svg"
@@ -86,11 +86,11 @@
           </li>
         </ul>
       </address>
-      <button type="button" class="mob-close-btn">
+      <!-- <button type="button" class="mob-close-btn">
         <svg class="mob-btn-icon" width="36" height="36">
           <use href="./images/icons.svg#icon-close-black-18dp-2-1-1"></use>
         </svg>
-      </button>
+      </button> -->
     </div>
     <div>
       <nav class="mob-header-navigation">
