--- a/src/css/your-order.css
+++ b/src/css/your-order.css
@@ -118,6 +118,7 @@
 @media screen and (min-width: 768px) {
   .your-order-main {
     max-width: 704px;
+    padding-bottom: 79px;
   }
 
   .background-image-girl {
