--- a/src/partials/our-collection.html
+++ b/src/partials/our-collection.html
@@ -1,7 +1,7 @@
 <!-- section Our collection -->
 <section class="collection">
   <div class="container">
-    <h2 class="title-section-collection">Our collection</h2>
+    <h2 class="title title-position">Our collection</h2>
     <ul class="collection-list">
       <li class="collection-card">
         <picture>
