--- a/src/css/our-collection.css
+++ b/src/css/our-collection.css
@@ -6,15 +6,20 @@
 
 .collection-ornament {
       position: absolute;
-      top: 8%;
+      top: 285px;
 }
 
-.title-section-collection {
+/* .title-section-collection {
     font-size: 32px;
     line-height: 1.38em;
     letter-spacing: -0.96px;
     margin-bottom: 40px;
     text-align: center;
+} */
+
+.title-position {
+    text-align: center;
+    margin-bottom: 40px;
 }
 
 .collection-list {
@@ -51,7 +56,7 @@
 .title-img {
     font-size: 14px;
     font-weight: 500;
-    line-height: 1em;
+    line-height: 14px;
     letter-spacing: 0.7px;
     text-transform: uppercase;
     width: 100%;
@@ -63,7 +68,7 @@
 .price {
     color: rgba(252, 249, 249, 0.40);
     font-size: 14px;
-    line-height: 1em;
+    line-height: 14px;
     letter-spacing: 0.7px;
 }
 
@@ -72,7 +77,7 @@
 @media screen and (min-width: 768px) {
  
  .collection-ornament {
-    top: 10%;
+    top: 221px;
   }
 
        
@@ -91,14 +96,14 @@
 
  .title-img {
     font-size: 18px;
-    line-height: 1em;
+    line-height: 18px;
     letter-spacing: 0.9px;
     
  }
 
  .price {
     font-size: 18px;
-    line-height: 1em;
+    line-height: 18px;
     letter-spacing: 0.9px;
  }
 
@@ -107,10 +112,6 @@
 /* Desktop */
 @media screen and (min-width: 1280px) {
              
-    .collection-ornament {
-        top: 18%;
-    }
-
     .collection-list {
         justify-content: center;
         row-gap: 40px;
