--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,12 +1,14 @@
 <section class="hero">
     <div class="container hero-container">
       <div class="hero-row-reverse-box">
-       <div><h1 class=" global-title hero-global-title">Reviving the traditional<span> Ukrainian</span>  artistry in every stitch.</h1>
+       <div>
+        <h1 class="global-title hero-global-title">Reviving the traditional<span> Ukrainian</span>  artistry in every stitch.</h1>
             <div class="hero-btn-box">
-       <a class="hero-btn link" href="#Your order">Order <svg class="hero-btn-icon" width="26" height="10">
-        <use href="../img/symbol-defs.svg#icon-untitled"></use>
+       <a class="hero-btn link" href="#Yourorder">Order <svg class="hero-btn-icon" width="26" height="10">
+        <use href="./img/symbol-defs.svg#icon-untitled"></use>
         </svg></a> 
-      </div>  </div>
+      </div>  
+    </div>
           
         
         <picture class="hero-picture">
@@ -31,9 +33,10 @@
             class="hero-global-img"
             loading="lazy" 
             
-          /></div>
+          />
       
-        </picture></div>
+        </picture>
+      </div>
       
         <div class="hero-text-box"><svg class="hero-icon" width="52" height="51">
         <use href="../img/symbol-defs.svg#icon-sun"></use>
