about changes into

--- a/src/css/about-us.css
+++ b/src/css/about-us.css
@@ -1,13 +1,13 @@
 /* about-us */
-.about-us {
+/*.about-us {
   padding: 80px 20px;
-}
+} */
 .about-container {
   background-image: url(../img/ornament-about-use-mob.png);
   background-repeat: no-repeat;
   background-position: right;
   background-position-y: bottom;
-  background-size: auto;
+  background-size: auto 408px;
   margin: 0 auto;
 }
 
@@ -37,7 +37,6 @@
 
 .about-text {
   padding: 6px;
-
   transition: transform 0.7s, color 0.7s;
   cursor: pointer;
 }
@@ -60,10 +59,10 @@ border-radius: 5px;
 /*================== Screen 768 =============*/
 
 @media screen and (min-width: 768px) {
-  .about-us {
+  /*.about-us {
     padding: 100px 32px;
     max-width: 768px;
-  }
+  }*/
 
   .about-us-group {
     gap: 40px;
@@ -79,7 +78,7 @@ border-radius: 5px;
     background-repeat: no-repeat;
     background-position: right;
     background-position-y: bottom;
-    background-size: auto;
+    background-size: auto 484px;
   }
 
   @media (min-device-pixer-ratio: 2),
@@ -89,20 +88,20 @@ border-radius: 5px;
       background-image: url(../img/ornament-about-use-tab@2x.png);
     }
   }
-  .about-img-inner {
+  /*.about-img-inner {
     width: 704px;
     height: 545px;
-  }
+  }*/
 }
 /*================== /Screen 768 =============*/
 
 /*================== Screen 1280 =============*/
 
 @media screen and (min-width: 1280px) {
-  .about-us {
+  /*.about-us {
     padding: 150px 100px;
     max-width: 1440px;
-  }
+  }*/
   .about-us-group {
     display: flex;
     flex-direction: row;
@@ -119,7 +118,7 @@ border-radius: 5px;
     background-repeat: no-repeat;
     background-position: right;
     background-position-y: bottom;
-    background-size: auto;
+    /*background-size: auto;*/
     margin: 0 auto;
   }
 
@@ -134,10 +133,10 @@ border-radius: 5px;
     margin: 46px 0;
   }
 
-  .about-img-inner {
+  /*.about-img-inner {
     width: 594px;
     height: 545px;
-  }
+  }*/
 }
 
 /*================== /Screen 1280 =============*/
@@ -151,7 +150,7 @@ border-radius: 5px;
     background-repeat: no-repeat;
     background-position: right;
     background-position-y: bottom;
-    background-size: auto;
+   /* background-size: auto;*/
     margin: 0 auto;
   }
 
@@ -167,10 +166,10 @@ border-radius: 5px;
     margin: 78px 0;
   }
 
-  .about-img-inner {
+ /* .about-img-inner {
     width: 709px;
     height: 545px;
-  }
+  }*/
 }
 
 /*================== /Screen 1440 =============*/
