--- a/src/partials/about-us.html
+++ b/src/partials/about-us.html
@@ -27,6 +27,32 @@
       </ul>
     </div>
     <picture>
+        <source
+        srcset="../img/girl-and-boy-desctop.jpeg 1x, ../img/girl-and-boy-desctop@2x.jpeg 2x"
+          media="(min-width: 1440px)"
+        />
+        <source
+          srcset="../img/girl-and-boy-desctop-small.jpeg 1x, ../img/girl-and-boy-desctop-small@2x.jpeg 2x"
+          media="(min-width: 1280px)"
+        />
+        <source
+          srcset="../img/girl-and-boy-tab.jpeg 1x, ../img/girl-and-boy-tab@2x.jpeg 2x"
+          media="(min-width: 768px)"
+        />
+        <source
+         srcset="../img/girl-and-boy-mob.jpeg 1x, ../img/girl-and-boy-mob@2x.jpeg 2x"
+          media="(max-width: 767px)"
+        />
+        <img
+        class="about-img-inner"
+          src="../img/girl-and-boy-desctop.jpeg"
+          loading="lazy"
+          alt="sleeve"
+          width="709"
+          height="545"
+        />
+      </picture>
+    <!--<picture>
       <source
         srcset="
           ./img/girl-and-boy-desctop.jpeg    1x,
@@ -64,6 +90,6 @@
         height="499"
         loading="lazy"
       />
-    </picture>
+    </picture>-->
   </div>
 </section>
