--- a/src/css/header.css
+++ b/src/css/header.css
@@ -3,25 +3,29 @@
 .header {
   flex-grow: 1;
   padding: 31px 20px 57px 20px;
-  background-color: ;
+  background-color: #1c2225;
 }
 
 .open {
   display: flex !important;
 }
 
+/* .mobile-menu {
+  display: none;
+} */
+
 .header-container {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  min-height: 132px;
+  min-height: 44px;
   padding: 0;
   max-width: 375px;
   margin: 0 auto;
 }
 
 .header .container-container {
-  height: 132px;
+  height: 44px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -65,7 +69,7 @@
 
 .address {
   font-style: normal;
-  display: none; /* display: flex; */
+  display: none;
   margin-left: auto;
 }
 
@@ -127,6 +131,8 @@
   width: 80%;
   transform: scale(1);
   background-color: #ecd979;
+  stroke-linecap: round;
+  stroke-width: 2;
 }
 
 .burger::before,
@@ -137,6 +143,8 @@
   width: 100%;
   background-color: #ecd979;
   transition: all 0.3s ease 0s;
+  stroke-linecap: round;
+  stroke-width: 2;
 }
 
 .burger::before {
@@ -162,7 +170,7 @@
   transform: rotate(45deg) translate(0, 50%);
 }
 
-@media (max-width: 768px) {
+/* @media (max-width: 768px) {
   .burger {
     display: flex;
     margin-left: 12px;
@@ -174,6 +182,23 @@
     flex-shrink: 0;
     padding: 0;
   }
+
+  .mobile-menu {
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: var(--yellow, #ecd979);
+    padding: 20px 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    overflow: auto;
+    transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
 }
 
 @keyframes burgerAnimation {
@@ -183,7 +208,7 @@
   to {
     opacity: 1;
   }
-}
+} */
 
 @media (min-width: 768px) {
   .header-container {
@@ -191,11 +216,11 @@
   }
 
   .header {
-    padding: 0;
+    padding: 20px 32px 80px;
   }
 
   .header .header-container {
-    height: 156px;
+    height: 52px;
     justify-content: center;
   }
 
@@ -212,15 +237,15 @@
     justify-content: space-between;
   }
 
+  .header {
+    padding: 20px 100px 100px;
+  }
+
   .burger {
     display: none;
   }
   .header-container {
     max-width: 1280px;
-  }
-
-  .header .header-container {
-    height: 172px;
   }
 
   .header-menu {
@@ -262,19 +287,20 @@
     max-width: 1440px;
   }
 
-  .header .header-container {
-    height: 170px;
+  .header {
+    padding-top: 18px;
   }
 }
 
 /* ----------------- Mob-menu ------------------- */
 
-.mob-menu {
+.mobile-menu {
   position: fixed;
+  margin: 0 auto;
   z-index: 1;
   top: 0;
-  left: 0;
-  width: 100%;
+  right: 0;
+  width: 274px;
   height: 100%;
   background-color: var(--yellow, #ecd979);
   padding: 20px 20px;
@@ -284,29 +310,46 @@
   overflow: auto;
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  background-image: url('../img/');
+  background-size: cover;
+  background-position: center;
 }
 
-.mob-menu.is-open {
+.mobile-menu.is-open {
   transform: translateY(0);
 }
 
-.mob-address {
-}
 .mob-address-menu {
-}
-.mob-address-item {
+  margin-bottom: 186px;
 }
 .mob-address-link {
+  text-decoration: none;
+  color: #1c2225;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 1.17em; /* 116.667% */
+  text-transform: uppercase;
 }
-.mob-close-btn {
-}
-.mob-btn-icon {
-}
+
 .mob-header-navigation {
+  display: flex;
+  justify-content: flex-end;
 }
 .mob-header-menu {
+  display: inline-flex;
+  flex-direction: column;
+  align-items: flex-end;
+  gap: 20px;
 }
 .mob-header-menu-item {
+  column-gap: 20px;
 }
-.mob-menu-img {
+
+.menu-link {
+  text-decoration: none;
+  color: #1c2225;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 1.29em; /* 128.571% */
+  text-transform: uppercase;
 }
