--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -75,7 +75,7 @@
 
   <!-- -------------Mob-menu------------ -->
 
-  <div class="mob-menu">
+  <div data-menu class="mobile-menu is-open">
     <div>
       <address class="mob-address">
         <ul class="mob-address-menu">
@@ -86,7 +86,7 @@
           </li>
         </ul>
       </address>
-      <!-- <button type="button" class="mob-close-btn">
+      <!-- <button data-menu-close type="button" class="menu-close">
         <svg class="mob-btn-icon" width="36" height="36">
           <use href="./images/icons.svg#icon-close-black-18dp-2-1-1"></use>
         </svg>
@@ -95,27 +95,27 @@
     <div>
       <nav class="mob-header-navigation">
         <ul class="mob-header-menu">
-          <li class="mob-header-menu-item"><a href="#">About us</a></li>
-          <li class="mob-header-menu-item"><a href="#">Our collection </a></li>
-          <li class="mob-header-menu-item"><a href="#">CUSTOMER ORDER</a></li>
-          <li class="mob-header-menu-item"><a href="#">TEstimonials</a></li>
+          <li class="mob-header-menu-item">
+            <a class="menu-link" href="#">About us</a>
+          </li>
+          <li class="mob-header-menu-item">
+            <a class="menu-link" href="#">Our collection </a>
+          </li>
+          <li class="mob-header-menu-item">
+            <a class="menu-link" href="#">CUSTOMER ORDER</a>
+          </li>
+          <li class="mob-header-menu-item">
+            <a class="menu-link" href="#">TEstimonials</a>
+          </li>
         </ul>
       </nav>
     </div>
-    <div>
-      <img
-        srcset="./images/ 1x, ./images/ 2x"
-        src="./images/"
-        alt="ornament"
-        width="340"
-        class="mob-menu-img"
-      />
-    </div>
   </div>
-  <script>
+  <!-- <script src="./js/menu.js"></script> -->
+  <!-- <script>
     document.querySelector('.burger').addEventListener('click', function () {
       this.classList.toggle('active');
-      document.querySelector('.nav').classList.toggle('open');
+      document.querySelector('.mobile-menu').classList.toggle('open');
     });
-  </script>
+  </script> -->
 </header>
