Header-Branch fin

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -110,12 +110,13 @@
         </ul>
       </nav>
     </div>
+    <div class="back-img"></div>
   </div>
   <!-- <script src="./js/menu.js"></script> -->
-  <!-- <script>
+  <script>
     document.querySelector('.burger').addEventListener('click', function () {
       this.classList.toggle('active');
       document.querySelector('.mobile-menu').classList.toggle('open');
     });
-  </script> -->
+  </script>
 </header>
