--- a/src/css/header.css
+++ b/src/css/header.css
@@ -58,7 +58,7 @@
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
-  line-height: 1.29em; /* 128.571% */
+  line-height: 1.29; /* 128.571% */
   text-transform: uppercase;
   text-decoration: none;
 }
@@ -111,7 +111,7 @@
   font-family: Manrope;
   font-size: 14px;
   font-style: normal;
-  line-height: 1.43em;
+  line-height: 1.43;
   text-transform: uppercase;
 }
 
@@ -131,8 +131,7 @@
   width: 80%;
   transform: scale(1);
   background-color: #ecd979;
-  stroke-linecap: round;
-  stroke-width: 2;
+  border-radius: 2px;
 }
 
 .burger::before,
@@ -143,16 +142,16 @@
   width: 100%;
   background-color: #ecd979;
   transition: all 0.3s ease 0s;
-  stroke-linecap: round;
-  stroke-width: 2;
 }
 
 .burger::before {
   top: 0;
+  border-radius: 2px;
 }
 
 .burger::after {
   bottom: 0;
+  border-radius: 2px;
 }
 
 /* -------------- Клас active для анімації бургера ---------------*/
@@ -170,7 +169,7 @@
   transform: rotate(45deg) translate(0, 50%);
 }
 
-/* @media (max-width: 768px) {
+@media (max-width: 768px) {
   .burger {
     display: flex;
     margin-left: 12px;
@@ -185,11 +184,12 @@
 
   .mobile-menu {
     position: fixed;
+    margin: 0 auto;
     z-index: 1;
     top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+    right: auto;
+    width: 274px;
+    height: 812px;
     background-color: var(--yellow, #ecd979);
     padding: 20px 20px;
     display: flex;
@@ -198,6 +198,61 @@
     overflow: auto;
     transform: translateY(100%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .mobile-menu.is-open {
+    transform: translateY(0);
+  }
+
+  .mob-address-menu {
+    margin-bottom: 186px;
+  }
+  .mob-address-link {
+    text-decoration: none;
+    color: #1c2225;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 1.17; /* 116.667% */
+    text-transform: uppercase;
+  }
+
+  .mob-header-navigation {
+    display: flex;
+    justify-content: flex-end;
+  }
+  .mob-header-menu {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    gap: 20px;
+  }
+  .mob-header-menu-item {
+    column-gap: 20px;
+    align-items: flex-end;
+  }
+
+  .menu-link {
+    text-decoration: none;
+    color: #1c2225;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 1.29em; /* 128.571% */
+    text-transform: uppercase;
+  }
+
+  .back-img {
+    margin-top: 185px;
+    display: flex;
+    width: 340px;
+    height: 302px;
+    padding: 0px 0.456px 0.337px 0px;
+    justify-content: center;
+    align-items: center;
+    flex-shrink: 0;
+    background-image: url('../img/ornament-menu-mob.png');
+    background-position: bottom;
+    background-repeat: no-repeat;
+    background-size: cover;
   }
 }
 
@@ -208,7 +263,7 @@
   to {
     opacity: 1;
   }
-} */
+}
 
 @media (min-width: 768px) {
   .header-container {
@@ -299,9 +354,9 @@
   margin: 0 auto;
   z-index: 1;
   top: 0;
-  right: 0;
+  right: auto;
   width: 274px;
-  height: 100%;
+  height: 812px;
   background-color: var(--yellow, #ecd979);
   padding: 20px 20px;
   display: flex;
@@ -310,9 +365,6 @@
   overflow: auto;
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  background-image: url('../img/');
-  background-size: cover;
-  background-position: center;
 }
 
 .mobile-menu.is-open {
@@ -327,7 +379,7 @@
   color: #1c2225;
   font-size: 12px;
   font-weight: 400;
-  line-height: 1.17em; /* 116.667% */
+  line-height: 1.17; /* 116.667% */
   text-transform: uppercase;
 }
 
@@ -336,13 +388,14 @@
   justify-content: flex-end;
 }
 .mob-header-menu {
-  display: inline-flex;
+  display: flex;
   flex-direction: column;
   align-items: flex-end;
   gap: 20px;
 }
 .mob-header-menu-item {
   column-gap: 20px;
+  align-items: flex-end;
 }
 
 .menu-link {
@@ -352,4 +405,19 @@
   font-weight: 400;
   line-height: 1.29em; /* 128.571% */
   text-transform: uppercase;
+}
+
+.back-img {
+  margin-top: 185px;
+  display: flex;
+  width: 340px;
+  height: 302px;
+  padding: 0px 0.456px 0.337px 0px;
+  justify-content: center;
+  align-items: center;
+  flex-shrink: 0;
+  background-image: url('../img/ornament-menu-mob.png');
+  background-position: bottom;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
