--- a/src/css/header.css
+++ b/src/css/header.css
@@ -74,12 +74,19 @@
 }
 
 .address-link {
+  color: var(--white, #fcf9f9);
+  font-family: Manrope;
+  font-size: 14px;
+  font-style: normal;
+  line-height: 1.43;
+  text-transform: uppercase;
   text-decoration: none;
 }
 
-.address-link:hover {
+.address-item:hover {
   border: 1px solid var(--yellow, #ecd979);
 }
+
 .soc-menu {
   display: flex;
   display: flex;
@@ -104,15 +111,6 @@
 
 .soc-link:hover {
   border: 1px solid var(--yellow, #ecd979);
-}
-
-.address-link {
-  color: var(--white, #fcf9f9);
-  font-family: Manrope;
-  font-size: 14px;
-  font-style: normal;
-  line-height: 1.43;
-  text-transform: uppercase;
 }
 
 .burger {
@@ -180,79 +178,6 @@
     border: 1px solid rgba(0, 0, 0, 0);
     flex-shrink: 0;
     padding: 0;
-  }
-
-  .mobile-menu {
-    position: fixed;
-    margin: 0 auto;
-    z-index: 1;
-    top: 0;
-    right: auto;
-    width: 274px;
-    height: 812px;
-    background-color: var(--yellow, #ecd979);
-    padding: 20px 20px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    overflow: auto;
-    transform: translateY(100%);
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-
-  .mobile-menu.is-open {
-    transform: translateY(0);
-  }
-
-  .mob-address-menu {
-    margin-bottom: 186px;
-  }
-  .mob-address-link {
-    text-decoration: none;
-    color: #1c2225;
-    font-size: 12px;
-    font-weight: 400;
-    line-height: 1.17; /* 116.667% */
-    text-transform: uppercase;
-  }
-
-  .mob-header-navigation {
-    display: flex;
-    justify-content: flex-end;
-  }
-  .mob-header-menu {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-    gap: 20px;
-  }
-  .mob-header-menu-item {
-    column-gap: 20px;
-    align-items: flex-end;
-  }
-
-  .menu-link {
-    text-decoration: none;
-    color: #1c2225;
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 1.29em; /* 128.571% */
-    text-transform: uppercase;
-  }
-
-  .back-img {
-    margin-top: 185px;
-    display: flex;
-    width: 340px;
-    height: 302px;
-    padding: 0px 0.456px 0.337px 0px;
-    justify-content: center;
-    align-items: center;
-    flex-shrink: 0;
-    background-image: url('../img/ornament-menu-mob.png');
-    background-position: bottom;
-    background-repeat: no-repeat;
-    background-size: cover;
   }
 }
 
@@ -350,74 +275,121 @@
 /* ----------------- Mob-menu ------------------- */
 
 .mobile-menu {
-  position: fixed;
-  margin: 0 auto;
-  z-index: 1;
+  transform: translateX(100%);
+  opacity: 0;
+  position: absolute;
+  right: 0;
   top: 0;
-  right: auto;
   width: 274px;
-  height: 812px;
-  background-color: var(--yellow, #ecd979);
-  padding: 20px 20px;
+  background-color: #ecd979;
+  height: 100vh;
+  padding-top: 20px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  overflow: auto;
-  transform: translateY(100%);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 .mobile-menu.is-open {
-  transform: translateY(0);
+  transform: translateX(0);
+  opacity: 1;
 }
 
-.mob-address-menu {
-  margin-bottom: 186px;
-}
 .mob-address-link {
+  display: flex;
+  padding: 12px 20px;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  border-radius: 15px;
+  border: 1px solid rgba(28, 34, 37, 0.1);
   text-decoration: none;
   color: #1c2225;
+  font-family: Manrope;
   font-size: 12px;
+  font-style: normal;
   font-weight: 400;
   line-height: 1.17; /* 116.667% */
   text-transform: uppercase;
+  float: left;
+}
+
+.mob-address-menu {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.mob-address-item {
+  margin-right: auto;
+}
+
+/* -------------------- Close--------------- */
+.close {
+  position: absolute;
+  right: 20px;
+  top: 35px;
+  width: 32px;
+  height: 32px;
+  opacity: 0.3;
+}
+.close:hover {
+  opacity: 1;
+}
+.close:before,
+.close:after {
+  position: absolute;
+  left: 15px;
+  content: ' ';
+  height: 33px;
+  width: 2px;
+  background-color: #070707;
+}
+.close:before {
+  transform: rotate(45deg);
+}
+.close:after {
+  transform: rotate(-45deg);
+}
+/* --------------------close----------------- */
+
+.mob-header-navigation,
+.mob-address {
+  padding: 0 20px;
+}
+
+.mob-address-item {
+  display: flex;
+  padding: 12px 20px;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+
+.mob-address-item:hover {
+  color: var(--yellow, #083dec);
 }
 
 .mob-header-navigation {
-  display: flex;
-  justify-content: flex-end;
+  text-align: right;
 }
+
 .mob-header-menu {
-  display: flex;
+  display: inline-flex;
   flex-direction: column;
   align-items: flex-end;
   gap: 20px;
 }
-.mob-header-menu-item {
-  column-gap: 20px;
-  align-items: flex-end;
-}
 
 .menu-link {
-  text-decoration: none;
   color: #1c2225;
+  font-family: Manrope;
   font-size: 14px;
+  font-style: normal;
   font-weight: 400;
-  line-height: 1.29em; /* 128.571% */
+  line-height: 1.28; /* 128.571% */
   text-transform: uppercase;
+  text-decoration: none;
 }
 
-.back-img {
-  margin-top: 185px;
-  display: flex;
-  width: 340px;
-  height: 302px;
-  padding: 0px 0.456px 0.337px 0px;
-  justify-content: center;
-  align-items: center;
-  flex-shrink: 0;
-  background-image: url('../img/ornament-menu-mob.png');
-  background-position: bottom;
-  background-repeat: no-repeat;
-  background-size: cover;
+.menu-link:hover {
+  color: var(--yellow, #083dec);
 }
