--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -75,8 +75,8 @@
 
   <!-- -------------Mob-menu------------ -->
 
-  <div data-menu class="mobile-menu is-open">
-    <div>
+  <div data-menu class="mobile-menu">
+    <div class="menu-cont">
       <address class="mob-address">
         <ul class="mob-address-menu">
           <li class="mob-address-item">
@@ -86,11 +86,9 @@
           </li>
         </ul>
       </address>
-      <!-- <button data-menu-close type="button" class="menu-close">
-        <svg class="mob-btn-icon" width="36" height="36">
-          <use href="./images/icons.svg#icon-close-black-18dp-2-1-1"></use>
-        </svg>
-      </button> -->
+      <button type="button" class="menu-close">
+        <a href="#" class="close"></a>
+      </button>
     </div>
     <div>
       <nav class="mob-header-navigation">
@@ -110,13 +108,25 @@
         </ul>
       </nav>
     </div>
-    <div class="back-img"></div>
+    <picture>
+      <source
+        srcset="./img/ornament-menu-tab.png 1x, img/ornament-menu-tab@2x.png 2x"
+        media="(min-width: 768px)"
+      />
+      <source
+        srcset="./img/ornament-menu-mob.png 1x, img/ornament-menu-mob@2x.png 2x"
+        media="(max-width: 767px)"
+      />
+      <img src="./img/ornament-menu-mob.png" alt="Ornament"
+      class="mobile-ornament" width: 340px; height: 302px; />
+    </picture>
   </div>
-  <!-- <script src="./js/menu.js"></script> -->
+
   <script>
     document.querySelector('.burger').addEventListener('click', function () {
       this.classList.toggle('active');
       document.querySelector('.mobile-menu').classList.toggle('open');
     });
   </script>
+  <!-- <script src="./js/menu.js"></script> -->
 </header>
