--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -92,6 +92,7 @@ display: none;
           font-size: 16px;
             padding: 14px 39px;
             margin-top: 40px;
+            max-width: 168px;
         }
         
            
